# EstimEnergy

./: .gitignore  .releaserc  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  dashboard.json  docker-compose.dev.yml  docker-compose.yml  hacs.json  logging.yml  package-lock.json  prometheus.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  unit-config.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: docker.yml  hacs.yml  hassfest.yml  publish.yml  pypi.yml  quality.yml  release-client.yml  release.yml  semantic-release.yml  sonar.yml
custom_components/estimenergy/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/estimenergy_integration/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
estimenergy/: common.py  config.py  const.py  db.py  device.py  helpers.py  influx.py  log.py  main.py  prometheus.py  shelly_test.py
estimenergy-web/: .gitignore  angular.json  package-lock.json  package.json
estimenergy-web/src/: index.html
estimenergy-web/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
estimenergy-web/src/app/day-modal/: day-modal.component.html  day-modal.component.spec.ts  day-modal.component.ts
estimenergy-web/src/app/device-modal/: device-modal.component.html  device-modal.component.spec.ts  device-modal.component.ts
estimenergy-web/src/app/device-table/: device-table.component.html  device-table.component.ts
estimenergy-web/src/app/devices-page/: devices-page.component.html  devices-page.component.spec.ts  devices-page.component.ts
estimenergy-web/src/app/energy-page/: energy-page.component.html  energy-page.component.spec.ts  energy-page.component.ts
estimenergy-web/src/app/energy-table/: energy-table.component.html  energy-table.component.spec.ts  energy-table.component.ts
estimenergy-web/src/app/navbar/: navbar.component.html  navbar.component.ts
estimenergy-web/src/app/test-button/: test-button.component.html  test-button.component.spec.ts  test-button.component.ts
estimenergy-web/src/environments/: environment.development.ts  environment.ts
estimenergy/client/: __init__.py  client.py
estimenergy/collector_clients/: __init__.py  collector_client.py  glow_client.py
estimenergy/collectors/: __init__.py  collector.py  glow_collector.py
estimenergy/dependencies/: __init__.py  settings.py
estimenergy/devices/: __init__.py  base_device.py  device.py  device_error.py  device_registry.py  glow_device.py  shelly_device.py
estimenergy/metrics/: __init__.py  collector_metrics.py
estimenergy/models/: __init__.py  collector.py  collector_data.py  day.py  device_config.py  energy_config.py  energy_data.py  glow_config.py  month.py  settings.py  shelly_config.py  total.py  year.py
estimenergy/models/config/: config.py  db_config.py  dev_config.py  device_config.py  influx_config.py  logging_config.py  networking_config.py  sql_config.py
estimenergy/prometheus/: collector_metrics.py
estimenergy/routers/: collector.py  collector_router.py  data.py  day_router.py  device_router.py  energy_data.py  energy_router.py  month_router.py  settings.py  total_router.py  year_router.py
estimenergy/schemas/: __init__.py  collector_schema.py  energy_schema.py
estimenergy/services/: data_service.py  influx_service.py  prediction_service.py  prometheus_service.py  sql_service.py
estimenergy_client/: client.py
hass/custom_components/estimenergy/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
scripts/: run_api.sh
tests/: conftest.py  test_app.py  test_dummy.py  test_glow_collector.py  test_metrics.py
tests/integration_tests/: test_metrics.py
