
[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "estimenergy"
description = "Estimate Energy Consumption"
authors = ["Lennard Beers <l.beers@outlook.de>"]
repository = "https://github.com/EuleMitKeule/EstimEnergy"
readme = "README.md"
packages = [{include = "estimenergy"}]
license = "MIT"
version = "0.0.0"

[tool.poe.tasks]
run = { "script" = "estimenergy.main:start" }
test = "pytest --cov estimenergy --cov-report term-missing --cov-report xml"
black = "black estimenergy tests custom_components/estimenergy_integration"
ruff = "ruff check estimenergy tests custom_components/estimenergy_integration"
isort = "isort estimenergy tests custom_components/estimenergy_integration"
mypy = "mypy estimenergy tests custom_components/estimenergy_integration"
bandit = "bandit -r estimenergy custom_components/estimenergy_integration"
format.sequence = ["black", "ruff", "isort", "mypy", "bandit"]
format.ignore_fail = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "~0.20.0"}
fastapi = "~0.92.0"
fastapi-crudrouter = "~0.8.6"
aioesphomeapi = "~13.4.0"
tortoise_orm = "~0.19.3"
requests = "~2.28.2"
prometheus_client = "~0.16.0"
prometheus-fastapi-instrumentator = "~5.10.0"
python-dotenv = "~0.21.1"
PyYAML = "~6.0"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
pytest-cov = "~4.0.0"
httpx = "~0.23.3"
PyYAML = "~6.0"
poetry = "~1.4.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
freezegun = "^1.2.2"
black = "^23.3.0"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.0.260"
bandit = "^1.7.5"
poethepoet = "^0.19.0"

[tool.poetry.group.build.dependencies]
poetry-dynamic-versioning = "~0.21.4"
twine = "~4.0.2"